Registration flows completed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,13 @@ val.message.notreadable=An error occurred while processing the HTTP request.
 val.illegal.argument=Invalid argument provided.
 val.null.pointer=Null reference encountered.
 val.connect.exception=The requested service is currently unavailable or not accepting connections.
-val.deviceid.required=Device Id is mandatory.
+
+val.mobileno.required=Mobile No is mandatory
+val.password.required=Password is mandatory
+val.uuid.required=UUID No is mandatory
+val.ostype.required=OS type mandatory
+val.deviceserial.required=Device serial is mandatory.
+val.device.location.required=Device location is mandatory.
 val.deviceid.invalid=Device Id is invalid.
 val.pushid.required=Push Id is mandatory.
 val.pushid.invalid=Push Id is invalid.
@@ -21,6 +27,8 @@ val.description.required=Description is mandatory.
 val.empty.languageEntity.list=No Language(s) exist.
 val.device.registration.success=Device successfully registered. Welcome aboard! Your device is now ready for use.
 val.device.already.registered=Device is already registered. Please choose a different device or contact support for assistance.
+val.device.registration.fail=Device is registration fail. Please choose a different device or contact support for assistance.
+val.device.no.device.found=You Don't have register device yet please register device to use this application
 val.request.successful=Request successful. Operation completed successfully.
 val.invalid.request.data=Invalid request data or parameters. Please check your input and try again.
 val.empty.pool.list=No Pool(s) exist for the given mobile device Id.
@@ -34,5 +42,12 @@ val.url.required=Url is mandatory.
 val.firmware.version.already.registered=Firmware version is already registered. Please choose a different version.
 val.firmware.registration.success=Firmware update successfully registered.
 val.no.firmware.update.available=No firmware update available.
+
+val.user.registered =User already registered
+val.user.registration.success =User Successfully Registered
+
+
+val.login.fail=Mobile Number or Password Incorrect
+val.login.success=Login Success
 
 
