--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,46 +6,24 @@ val.illegal.argument=Invalid argument provided.
 val.null.pointer=Null reference encountered.
 val.connect.exception=The requested service is currently unavailable or not accepting connections.
 
-val.mobileno.required=Mobile No is mandatory
+val.mobileno.required=Mobile is mandatory
 val.password.required=Password is mandatory
-val.uuid.required=UUID No is mandatory
+val.uuid.required=UUID is mandatory
 val.ostype.required=OS type mandatory
 val.deviceserial.required=Device serial is mandatory.
+val.deviceId.required=Device ID Required
 val.device.location.required=Device location is mandatory.
-val.deviceid.invalid=Device Id is invalid.
 val.pushid.required=Push Id is mandatory.
-val.pushid.invalid=Push Id is invalid.
-val.platform.required=Platform is mandatory.
-val.devicemodel.required=Device Model is mandatory.
-val.osname.required=OS Name is mandatory.
-val.osversion.required=OS Version is mandatory.
-val.prefferedlanguage.required=Preffered Language is mandatory.
-val.timezone.required=Time zone is mandatory.
-val.chlorinatorid.required=Chlorinator Id zone is mandatory.
-val.command.type.required=Command type is mandatory.
-val.description.required=Description is mandatory.
-val.empty.languageEntity.list=No Language(s) exist.
 val.device.registration.success=Device successfully registered. Welcome aboard! Your device is now ready for use.
-val.device.already.registered=Device is already registered. Please choose a different device or contact support for assistance.
-val.device.registration.fail=Device is registration fail. Please choose a different device or contact support for assistance.
+val.device.registration.fail=Device registration fail. Please choose a different device or contact support for assistance.
 val.device.no.device.found=You Don't have register device yet please register device to use this application
-val.request.successful=Request successful. Operation completed successfully.
-val.invalid.request.data=Invalid request data or parameters. Please check your input and try again.
-val.empty.pool.list=No Pool(s) exist for the given mobile device Id.
-val.pool.metrics.not.exist=Pool metrics not found. The specified pool metrics do not exist.
-val.mode.required=Mode is mandatory.
-val.dayofweek.required=Day of week is mandatory.
-val.program.required=Program is mandatory.
-val.empty.mode.settings=No Mode Settings exist for the given chlorinator.
-val.version.required=Version is mandatory.
-val.url.required=Url is mandatory.
-val.firmware.version.already.registered=Firmware version is already registered. Please choose a different version.
-val.firmware.registration.success=Firmware update successfully registered.
-val.no.firmware.update.available=No firmware update available.
 
 val.user.registered =User already registered
 val.user.registration.success =User Successfully Registered
 
+val.device.register.invalid = User or Device not Registered Properly.
+
+val.metrics.notfound=Grow Tower Metrics not Found;
 
 val.login.fail=Mobile Number or Password Incorrect
 val.login.success=Login Success
